# KML-CommonTools

./: .editorconfig  AGENTS.md  README.md  pyproject.toml
src/assets/: samplesheet-template-v5.csv
src/config/: database.yaml  software.py
src/functions/: gene_id_lookup.py
src/kml_commontools/: bcl2fastq_merge_lanes.py  dl_seq_by_efetch.py  haobo_info_rec_to_samplesheet.py  prep_input_from_bcl2fastq.py  rnaseq_ensg_convert_symbol.py  simu_fq_by_vcf.py
src/util/: simu_fq_by_vcf-filter_paired_reads_by_qname.pl
tests/: 20260211-高通量测序仪Nextseq 500 样本上机信息记录表v4.0.xlsx  test_gene_id_lookup.py
