[project]
name = "kml-commontools"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.3.0,<9.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "biopython (>=1.85,<2.0)",
]

[tool.poetry]
packages = [{include = "kml_commontools", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
